--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <script>
     const NUM_IMAGES = 23;
     const IMAGES_PATH = "cells/";
-    const IMAGE_NAMES = Array.from({ length: NUM_IMAGES }, (_, i) => `cell${i + 1}.png`);
+    const IMAGE_NAMES = Array.from({ length: NUM_IMAGES }, (_, i) => `cell_${i + 1}.png`);
 
     const screenWidth = window.innerWidth;
     const screenHeight = window.innerHeight;
