--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     .cell {
       position: absolute;
       pointer-events: none;
-      opacity: 0.9;
+      opacity: 0.85;
       animation: drift 30s infinite alternate ease-in-out;
+      transform: rotate(var(--base-rotation));
     }
 
     @keyframes drift {
@@ -51,6 +52,18 @@
       const top = Math.random() * screenHeight;
       img.style.left = `${left}px`;
       img.style.top = `${top}px`;
+
+      const initialRotation = `${Math.floor(Math.random() * 360)}deg`;
+      img.style.setProperty('--base-rotation', initialRotation);
+
+      const dx = (Math.random() - 0.5) * 100;
+      const dy = (Math.random() - 0.5) * 100;
+      const rot = `${Math.random() * 20 - 10}deg`;
+
+      img.style.setProperty('--dx', dx.toFixed(2));
+      img.style.setProperty('--dy', dy.toFixed(2));
+      img.style.setProperty('--rot', rot);
+
 
       // Custom drift values per cell
       const dx = (Math.random() - 0.5) * 100;  // max 50px left/right
