--- a/index.html
+++ b/index.html
@@ -100,12 +100,13 @@
       const diffTime = target - today;
       const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
 
-      document.getElementById('countdown').textContent = `🍎 ${diffDays} days until October 1st`;
+      document.getElementById('countdown').textContent = `${diffDays} days until the apple is ripe`;
     }
 
     updateCountdown();
 
   </script>
+  
   <div id="countdown"></div>
 </body>
 </html>
