--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       color: white;
       font-family: monospace;
       font-size: 16px;
-      background-color: rgba(0, 0, 0, 0.5);
+      background-color: white;
       padding: 6px 10px;
       border-radius: 6px;
       z-index: 999;
