--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       img.style.height = "auto"; // preserve aspect ratio
 
       // Calculate center clustering bias
-      const today = new Date();
+      const today = new Date('2024-09-20');
       const target = new Date(today.getFullYear(), 9, 1); // October = month 9
       if (today > target) target.setFullYear(target.getFullYear() + 1);
 
