--- a/index.html
+++ b/index.html
@@ -34,12 +34,11 @@
       color: white;
       font-family: monospace;
       font-size: 16px;
-      background-color: green;
+      background-color: rgba(0, 255, 0, 0.5);
       padding: 6px 10px;
       border-radius: 6px;
       z-index: 999;
     }
-
 
     
   </style>
@@ -56,7 +55,7 @@
 
     const screenWidth = window.innerWidth;
     const screenHeight = window.innerHeight;
-    const numberOfCells = Math.floor((screenWidth * screenHeight) / 6000); // density control
+    const numberOfCells = Math.floor((screenWidth * screenHeight) / 6000);
 
     for (let i = 0; i < numberOfCells; i++) {
       const img = document.createElement("img");
@@ -64,7 +63,7 @@
       img.className = "cell";
 
       if (img.src.includes('cell_1.png')) {
-        img.style.width = '100px'; // fixed large size for cell_5.png
+        img.style.width = '100px';
       } else {
         const size = Math.random() * 50 + 20;
         img.style.width = `${size}px`;
@@ -137,7 +136,7 @@
       const diffTime = target - today;
       const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
 
-      document.getElementById('countdown').textContent = `${diffDays} days until the apple is ripe`;
+      document.getElementById('countdown').textContent = `${diffDays} days until the apple is ripe!`;
     }
 
     updateCountdown();
