--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       color: white;
       font-family: monospace;
       font-size: 16px;
-      background-color: rgba(0, 255, 0, 0.5);
+      background-color: rgba(0, 255, 0, 0.3);
       padding: 6px 10px;
       border-radius: 6px;
       z-index: 999;
@@ -61,6 +61,10 @@
       const img = document.createElement("img");
       img.src = IMAGES_PATH + IMAGE_NAMES[Math.floor(Math.random() * NUM_IMAGES)];
       img.className = "cell";
+
+      const redShift = daysPassed / TOTAL_DAYS; // 0 to 1
+
+      img.style.filter = sepia(${redShift}) saturate(${1 + redShift * 3}) hue-rotate(${redShift * 60}deg);
 
       if (img.src.includes('cell_1.png')) {
         img.style.width = '100px';
