--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Apple a Day</title>
+  <title>Apple a day</title>
   <style>
     body {
       margin: 0;
@@ -32,9 +32,8 @@
       top: 10px;
       right: 10px;
       color: white;
-      font-family: monospace;
+      font-family: 'IBM Plex Sans Condensed';
       font-size: 16px;
-      background-color: rgba(0, 255, 0, 0.3);
       padding: 6px 10px;
       border-radius: 6px;
       z-index: 999;
