--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       top: 10px;
       right: 10px;
       color: white;
-      font-family: 'IBM Plex Sans Condensed';
+      font-family: 'Courier New';
       font-size: 16px;
       padding: 6px 10px;
       border-radius: 6px;
@@ -89,7 +89,7 @@
 
 
       // Calculate clustering factor based on days until October
-      const today = new Date('2024-07-20');
+      const today = new Date('2024-05-20');
       const target = new Date(today.getFullYear(), 9, 1); // October = 9 (0-indexed)
       if (today > target) target.setFullYear(target.getFullYear() + 1);
       const diffTime = target - today;
