--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
         document.getElementById("monthly-message").textContent = message;
       }
 
-      const message = messages[month] || "";
-      document.getElementById("monthly-message").textContent = message;
+      //const message = messages[month] || "";
+      //document.getElementById("monthly-message").textContent = message;
 
   </script>  
 </html>
