--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       color: white;
       font-family: 'Courier New';
       font-size: 16px;
+      background-color: rgba(255, 255, 255, 0.7);
       padding: 6px 10px;
       border-radius: 6px;
       z-index: 999;
