--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
       };
 
       const now = new Date();
-      const month = now.getMonth(); 
+      const month = now.getMonth();
+      const day = now.getDate();
 
        const message = messages[month];
       if (message && day <= 14) {
