--- a/index.html
+++ b/index.html
@@ -83,21 +83,18 @@
         const size = Math.random() * 50 + 20;
         img.style.width = `${size}px`;
       }
-      img.style.height = "auto"; // preserve aspect ratio
+      img.style.height = "auto";
 
-
-      // Calculate clustering factor based on days until October
       const today = new Date('2024-05-20');
-      const target = new Date(today.getFullYear(), 9, 1); // October = 9 (0-indexed)
+      const target = new Date(today.getFullYear(), 9, 1);
       if (today > target) target.setFullYear(target.getFullYear() + 1);
       const diffTime = target - today;
       const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
-      const maxDays = 150; // how many days out you want to simulate total clustering over
-      const clusteringFactor = Math.min(1, 1 - diffDays / maxDays); // 0 (spread out) to 1 (fully clustered)
+      const maxDays = 150;
+      const clusteringFactor = Math.min(1, 1 - diffDays / maxDays);
 
-      // Calculate circular position around center
       const angle = Math.random() * 2 * Math.PI;
-      const radius = (1 - clusteringFactor) * (Math.random() * screenWidth / 2.5); // tighter radius over time
+      const radius = (1 - clusteringFactor) * (Math.random() * screenWidth / 2.5);
       const centerX = screenWidth / 2;
       const centerY = screenHeight / 2;
       const left = centerX + radius * Math.cos(angle);
@@ -109,10 +106,9 @@
       const initialRotation = `${Math.floor(Math.random() * 360)}deg`;
       img.style.setProperty('--base-rotation', initialRotation);
 
-      // Custom drift values per cell
-      const dx = (Math.random() - 0.5) * 100;  // max 50px left/right
-      const dy = (Math.random() - 0.5) * 100;  // max 50px up/down
-      const rot = `${Math.random() * 20 - 10}deg`; // slight rotation back and forth
+      const dx = (Math.random() - 0.5) * 100; 
+      const dy = (Math.random() - 0.5) * 100; 
+      const rot = `${Math.random() * 20 - 10}deg`;
 
       img.style.setProperty('--dx', dx.toFixed(2));
       img.style.setProperty('--dy', dy.toFixed(2));
@@ -123,9 +119,8 @@
 
     function updateCountdown() {
       const today = new Date();
-      const target = new Date(today.getFullYear(), 9, 1); // October is month 9 (0-based index)
-  
-      // If it's already past October this year, target next year
+      const target = new Date(today.getFullYear(), 9, 1);
+
       if (today > target) {
         target.setFullYear(target.getFullYear() + 1);
       }
