--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
       left: 10px;
       color: white;
       font-family: 'Courier New';
-      font-size: 14px;
+      font-size: 12px;
       background-color: rgba(255, 255, 255, 0.3);
       padding: 8px 12px;
-      border-radius: 6px;
+      //border-radius: 6px;
       z-index: 998;
     }
 
