--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   }
 
     function updateCountdown() {
-      const today = new Date();
+      const today = new Date('2025-09-10');
       const target = new Date(today.getFullYear(), 9, 1);
 
       if (today > target) {
