--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   </style>
 </head>
 <body>
+  <a href="#" id="mute-toggle" style="position: fixed; top: 10px; left: 10px; color: white; font-family: 'Courier New'; font-size: 22px; z-index: 1000;">m</a>
   <audio id="bg-audio" autoplay loop>
   <source src="assets/audio/.wav" type="audio/wav">
   Your browser does not support the audio element.
