--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body>
   <a href="#" id="mute-toggle" style="position: fixed; top: 10px; left: 10px; color: white; font-family: 'Courier New'; font-size: 22px; z-index: 1000;">m</a>
   <audio id="bg-audio" autoplay loop muted>
-  <source src="assets/audio/themev4.wav" type="audio/wav">
+  <source src="audio/themev4.wav" type="audio/wav">
 </audio>
   
   <div id="countdown"></div>
