--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
   </style>
 </head>
 <body>
-  <a href="#" id="mute-toggle" style="position: fixed; top: 10px; left: 10px; color: white; font-family: 'Courier New'; font-size: 22px; z-index: 1000;">m</a>
+  <a href="#" id="mute-toggle" style="position: fixed; top: 10px; left: 10px; color: white; font-family: 'Courier New'; font-size: 18px; z-index: 1000;">sound</a>
+  
   <audio id="bg-audio" autoplay loop muted>
   <source src="audio/themev4.wav" type="audio/wav">
 </audio>
