--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
   </style>
 </head>
 <body>
-  <a href="#" id="mute-toggle" style="position: fixed; top: 10px; left: 10px; color: white; font-family: 'Courier New'; font-size: 16px; z-index: 1000;">sound</a>
-  <a href="#" id="about-toggle" style="position: fixed; top: 40px; left: 10px; color: white; font-family: 'Courier New'; font-size: 16px; z-index: 1000;">about</a>
+  <a href="#" id="mute-toggle" style="position: fixed; top: 10px; left: 10px; color: white; font-family: 'Courier New'; font-size: 16px; text-decoration: none; z-index: 1000;">sound</a>
+  <a href="#" id="about-toggle" style="position: fixed; top: 40px; left: 10px; color: white; font-family: 'Courier New'; font-size: 16px; text-decoration: none; z-index: 1000;">about</a>
 
       <div id="about-content" style="
         position: fixed;
