--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     aboutToggle.style.opacity = 1;
       } else {
         if (!isContentLoaded) {
-          fetch("README.md")
+          fetch('README.md?nocache=' + Date.now())
             .then((response) => response.text())
             .then((data) => {
               // Convert newlines to <br> for display
