--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       font-size: 14px;
       background-color: rgba(0, 0, 0, 0.85);
       padding: 8px 12px;
+      border-radius: 6px;
       opacity: 0;
       transition: opacity 0.3s ease;
       pointer-events: auto;
