--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       overflow: hidden;
     }
 
+    a:hover {
+      text-decoration: underline;
+    }
+
     .cell {
       position: absolute;
       pointer-events: none;
